--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,25 @@
   <body>
   <div class="nav-link">
     <% if user_signed_in? %>
-          <a href="/courses"> View all Courses </a> -
-          <%= link_to "Registered Courses", registered_courses_path(current_user.id) %> -
-          <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
+      <a href="/courses"> View all Courses </a> -
+      <%= link_to "Registered Courses", registered_courses_path(current_user.id) %> -
+      <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
     <% else %>
-          <a href="/users/sign_in"> Sign In </a>
+      <a href="/users/sign_in"> Sign In </a>
     <% end %>
   </div>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
-  </body>
+  <%= yield %>
+  <div class="search-form">
+    <p style="color: red" class="alert"><%= alert %></p>
+    <%= form_tag("/courses/search", method: :post) do %>
+      <label for="crn">CRN:</label>
+      <%= text_field_tag "crn" %>
+      <br>
+      <label for="course_name">Course Name:</label>
+      <%= text_field_tag "course_name" %>
+      <br>
+      <%= submit_tag "Search" %>
+    <% end %>
+  </div>
+</body>
 </html>
