implemented search feature with tests. bugs fixed

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,5 @@
 <p style="color: green"><%= notice %></p>
-
-<% @courses = Course.all %>
+<p style="color: red" class="alert"><%= alert %></p>
 
 <h1>Courses</h1>
 
