--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
      <!-- <a href="/users/sign_in"> Sign In </a> -->
     <% end %>
   </div>
-    <p class="alert"><%= alert %></p>
+  <p style="color: red" class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
