--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -6,7 +6,7 @@
   <% @courses.each do |course| %>
     <%= render course %>
     <p>
-      <%= link_to "Show this course", course %>
+      <%= link_to "Show this course", course_path(course.id) %>
     </p>
   <% end %>
 </div>
