added search feature along with testing  in rspec

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <%= link_to "Sign In", new_user_session_path, class: "dropdown-item" %>
     <% end %>
   </div>
-    <p class="alert"><%= alert %></p>
+    <p style="color: red" class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
