--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -19,10 +19,12 @@
     <%= course.Capacity %>
   </p>
   <p>
-  <% if current_user.registered_courses.include? course.id %>
-    <%= button_to "Drop course", drop_course_path(course.id, current_user.id), method: :delete %>
-  <% else %>
-    <%= button_to "Register course", register_course_path(course.id, current_user.id), method: :post %>
-  <% end %>
+  <% if current_user.id != 1%>
+        <% if current_user.registered_courses.include? course.id %>
+          <%= button_to "Drop course", drop_course_path(course.id, current_user.id), method: :delete %>
+        <% else %>
+          <%= button_to "Register course", register_course_path(course.id, current_user.id), method: :post %>
+        <% end %>
+    <% end %>
   </p>
 </div>
