--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,8 +3,13 @@
 <%= render @course %>
 
 <div>
-  <%= link_to "Edit this course", edit_course_path(@course) %> |
-  <%= link_to "Back to courses", courses_path %>
-
+<% if current_user.id == 1 %>
+<% if @course.Capacity != 0 %>
+  <%= link_to "Edit this course", edit_course_path(@course) %>
+<% end %> |
+<%= link_to "Back to courses", courses_path %>
+<% if @course.Capacity != 0 %>
   <%= button_to "Destroy this course", @course, method: :delete %>
+  <% end %>
+<% end %>
 </div>
